melhoria de lista de compra vazia

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
         <ul id="lista-de-compras">
         </ul>
+        <p class="mensagem-lista-vazia" id="mensagem-lista-vazia">
+          Sua lista de compras está vazia!
       </div>
     </main>
     <script defer src="index.js"></script>
