--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         Sua lista de compras está vazia!
     </div>
   </main>
-  <script defer src="index.js"></script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
